# runner-dashboard

./: .agent_remediation_state.json  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  VERSION  agent_remediation_140.py  bandit.yaml  fix_syntax.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-audit-ignore.txt  requirements.lock.txt  requirements.txt  start-dashboard.sh  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  update_server_correlation.py  vite.config.js  vite.config.ts  vitest.config.ts
.github/: CITATION.cff  CODEOWNERS  FUNDING.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  research.yml  task.yml
.github/scripts/: issue-backfill.js  labels-sync.js  labels-sync.test.js  panel-review.js  panel-review.test.js
.github/workflows/: Agent-Fleet-Dashboard.yml  Agent-Lease-Reaper.yml  Agent-Redundant-PR-Closer.yml  Jules-Auto-Repair.yml  Jules-Control-Tower.yml  Jules-PR-AutoFix.yml  agent-panel-review.yml  ci-nightly.yml  ci-secrets.yml  ci-spec-check.yml  ci-standard.yml  dependabot-auto-merge.yml  docker-build.yml  frontend-tests.yml  issue-taxonomy-backfill.yml  labels-sync.yml  local-only-runner-guard.yml  lockfile-upgrade.yml  release.yml  (+4 more)
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-Bitnet_Launcher-assessment.json  2026-04-26-C-testing.md  2026-04-26-Drake_Models-assessment.json  2026-04-26-Games-assessment.json  2026-04-26-L-ci-cd.md  2026-04-26-MEB_Conversion-assessment.json  2026-04-26-MLProjects-assessment.json  2026-04-26-Maxwell-Daemon-assessment.json  2026-04-26-Playground-assessment.json  2026-04-26-QuatEngine-assessment.json  2026-04-26-Tools_Private-assessment.json  2026-04-26-UpstreamDrift-assessment.json  2026-04-26-Worksheet-Workshop-assessment.json  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  2026-04-26-controls-assessment.json  assess_repo.py  assess_runner_dashboard.py  batch_assess.py  distribute_assessments.py  open_issues_controls.json  open_issues_drake.json  open_issues_runner_dashboard.json  repo_inventory.py  retry_failed.py
backend/: __init__.py  agent_dispatch_router.py  agent_launcher_router.py  agent_remediation.py  assessments_router.py  assistant_contract.py  assistant_tools.py  auth_webauthn.py  cache_utils.py  config_schema.py  dashboard_config.py  deployment_drift.py  diagnostics_router.py  dispatch_contract.py  dispatch_quota.py  error_models.py  gh_client.py  gh_utils.py  health.py  http_clients.py  identity.py  input_validation.py  issue_inventory.py  lease_synchronizer.py  linear_client.py  linear_inventory.py  linear_taxonomy_map.py  local_app_monitoring.py  machine_registry.py  maxwell_contract.py  maxwell_router.py  metrics.py  middleware.py  orchestration_audit.py  pr_inventory.py  principal.py  prometheus_metrics.py  proxy_utils.py  push.py  pyproject.toml  (+22 more)
backend/dashboard_config/: __init__.py  cache_ttls.py  timeouts.py
backend/dispatch/: SCHEMA_MIGRATIONS.md  __init__.py  audit.py  envelope.py  registry.py  signing.py  validate.py
backend/models/: github_payloads.py
backend/routers/: admin.py  assessments.py  assistant.py  auth.py  credentials.py  deployment.py  diagnostics.py  dispatch.py  feature_requests.py  fleet.py  fleet_orchestration.py  heavy_tests.py  linear.py  linear_sync.py  linear_webhook.py  maxwell.py  orchestration.py  orchestration_audit_routes.py  orchestration_node_routes.py  orchestration_schedule_routes.py  queue.py  queue_diagnostics.py  remediation.py  reports.py  repos.py  runner_audit.py  runner_diagnostics.py  runner_groups.py  runner_helpers.py  runners.py  runs_workflows.py  system.py  web_vitals.py
benchmarks/: .gitkeep  README.md
config/: agent_remediation.json  linear.json.example  principals.yml
deploy/: configure-agent-remediation.sh  configure-env-vars.sh  install-autoscaler.sh  launcher.ps1  launcher.sh  lib.sh  refresh-token.sh  register-protocol.ps1  rollback.sh  runner-autoscaler.service  runner-dashboard.service  scheduled-dashboard-maintenance.sh  setup-tailscale.sh  setup.sh  sudoers.d-runner-dashboard  update-deployed.sh  write-deployment-metadata.sh
docs/: accessibility-audit-2026.md  assistant-agent-mode-design.md  assistant-chat-endpoint-design.md  branch-protection.md  deployment-model.md  issue-migration-plan.md  issue-taxonomy-backfill.yml  issue-taxonomy.md  linear-integration.md  mobile-design-system.md  mobile-strategy-2026q3.md  panel-review-agent-tiers.md  privacy.md  pwa-launcher-design.md  shared-contracts-plan.md  tailscale-funnel.md  vite-migration-plan.md
frontend/: README.md  index.html  package.json  perf-budget.json  vite.config.ts
scratch/: validate_yaml.py
scripts/: check_frontend_perf_budget.py  check_local_only_workflows.py  check_ts_nocheck.sh  find-dupe-subprocess-env.py  regenerate-adr-index.py
tests/: conftest.py  test_agent_dispatch_router.py  test_agent_launcher_router.py  test_agent_remediation.py  test_api_integration.py  test_assistant_tools.py  test_async_hygiene.py  test_auth_webauthn.py  test_backend_routers.py  test_backup_state.py  test_cache_consolidation.py  test_cache_eviction.py  test_cache_utils.py  test_ci_config.py  test_config_schema.py  test_cpu_history_bounded.py  test_dashboard_config.py  test_dashboard_config_constants.py  test_deploy_hardening.py  test_dispatch_contract.py  test_dispatch_fanout_cap.py  test_documentation_freshness.py  test_envelope_signing.py  test_error_models.py  test_frontend_integrity.py  test_frontend_perf_budget.py  test_gh_client.py  test_github_payloads.py  test_health_module.py  test_http_clients.py  test_instrumentation.py  test_issue_inventory.py  test_keepalive_diagnostics.py  test_leader_election.py  test_linear_taxonomy_utils.py  test_log_requests_middleware.py  test_log_sanitize.py  test_max_body_size_middleware.py  test_maxwell_contract.py  test_maxwell_proxy.py  (+32 more)
(+140 files in other folders)
