[project]
name = "runner-dashboard"
version = "0.1.0"
description = "Runner dashboard for fleet management"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.130.0",
    "pydantic==2.13.3",
    "uvicorn[standard]==0.34.0",
    "psutil==6.1.1",
    "httpx==0.28.1",
    "PyYAML==6.0.2",
    "anthropic==0.49.0",
    "requests==2.33.0",
    "itsdangerous==2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "pytest-rerunfailures>=14.0",
    "respx>=0.21.1",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pip-audit>=2.10.0",
    "types-PyYAML",
    "types-requests",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.6.1",
    "pytest-rerunfailures==14.0",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
# -ra: show short summary for all non-passing outcomes
# -q: quiet mode
# --strict-markers: fail when an unregistered marker is used (issue #401)
# --strict-config: fail on unknown config options
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that touch real external systems (network, GitHub API, etc.); excluded from PR CI, run nightly",
    "network: marks tests that require live network access (subset of integration)",
    "playwright: marks browser-driven Playwright tests; excluded from default PR CI",
]
# filterwarnings: start permissive — escalate warning categories to errors only
# once the warning surface is audited. The current backend (FastAPI/Pydantic v2,
# httpx, anthropic) emits DeprecationWarnings from third-party packages that we
# do not control. See issue #401 for the audit plan.
filterwarnings = [
    "default",
]
# pytest-rerunfailures: retry transient ConnectionError failures once (issue #401).
# Note: a Prometheus flake counter is intentionally NOT wired up here — that is
# tracked separately in issue #322.
# TODO(#322): emit Prometheus counter when reruns occur.

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["frontend/", "deploy/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Type annotation strictness is enforced on new modules.
# Pre-existing large backend files are tracked for cleanup in issue #161.
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Strict checking for small, well-typed contract modules.
module = ["dispatch_contract", "remote_execution_contract"]
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
# Pre-existing large modules: relax strict_optional until #161 cleanup.
module = [
    "server",
    "agent_remediation",
    "workflow_stats",
    "usage_monitoring",
    "runner_autoscaler",
    "machine_registry",
    "deployment_drift",
    "report_files",
    "scheduled_workflows",
    "local_app_monitoring",
]
strict_optional = false
