[project]
name = "runner-dashboard"
version = "0.1.0"
description = "Runner dashboard for fleet management"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.130.0",
    "pydantic==2.13.3",
    "uvicorn[standard]==0.34.0",
    "psutil==6.1.1",
    "httpx==0.28.1",
    "PyYAML==6.0.2",
    "anthropic==0.49.0",
    "requests==2.33.0",
    "itsdangerous==2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pip-audit>=2.10.0",
    "types-PyYAML",
    "types-requests",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["frontend/", "deploy/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Global default: all new modules must have full type annotations.
# Pre-existing large backend files carry per-module overrides below (tracked for
# removal in #161). The CI step prints the override count to prevent growth.
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
# Strict checking for small, well-typed contract modules (already compliant).
module = ["dispatch_contract", "remote_execution_contract"]
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
# Pre-existing godfiles: relax untyped-defs and strict_optional until #161.
# Each release this list should shrink. Do NOT add new modules here.
module = [
    "server",
    "agent_remediation",
    "workflow_stats",
    "usage_monitoring",
    "runner_autoscaler",
    "machine_registry",
    "deployment_drift",
    "report_files",
    "scheduled_workflows",
    "local_app_monitoring",
]
disallow_untyped_defs = false
strict_optional = false
