[project]
name = "runner-dashboard-backend"
version = "0.1.0"
description = "Backend for the runner dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "pydantic==2.13.3",
    "uvicorn[standard]==0.46.0",
    "psutil==7.2.2",
    "httpx==0.28.1",
    "PyYAML==6.0.3",
    "anthropic==0.97.0",
    "requests==2.33.1",
    "itsdangerous==2.2.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv]
package = false